style.css
body {
	background-image: url("images/pattern.png");
    color: #444444;
}

.header{ overflow: hidden;
    background-color: #ffffff;
    width: 100%;
}


.name { background: #4aaaa5;
    text-align: center;
    float: left;
    font-weight: 600;
    padding:20px;
    margin-left: 250px;
    width: 200px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: white;
    font-size: 24px;
}

.links {float: left;
    text-decoration-color: #444444;
    margin: 25px 5px 22px 500px;
    font-size: 18px;
    
}

.main {
    width: 960px;
    margin-top:40px;
    background: #ffffff;
    margin-left: 250px;
}

.header2 {padding: 25px;
    font-weight: 600;
    color: #4aaaa5;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 24px;
    background: #ffffff;
    border-bottom: 2px solid #dddd;
    margin: 0px 20px;
    margin-bottom: 30px;
        
}

img {float: left;
    margin-right: 10px;   
}

.info {background: #ffffff;   
    margin-top: 15px;
}

p {font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    margin-left: 10px;
    font-weight: 400;
    line-height: 175%;
    
}

